# inertia-lab

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.raspberrypi  README.md  docker-compose.yml
config/: inertia-config.toml  prometheus.yml
scripts/: build-multiarch.sh  entrypoint.sh  healthcheck.sh
src/: lib.rs  main.rs
src/consensus/: astro_anchor.rs  evolution.rs  immunity.rs  metabolism.rs  mod.rs  poe.rs
src/crypto/: hash.rs  keys.rs  mod.rs  signatures.rs
src/memory/: fossil_storage.rs  genetic_memory.rs  mod.rs
src/network/: mesh.rs  mod.rs  p2p.rs  peer_manager.rs
src/node/: cli.rs  config.rs  inertia_node.rs  mod.rs
src/transport/: astro_anchor.rs  bluetooth_adv.rs  dns_spore.rs  evolution.rs  fountain.rs  immunity.rs  lora.rs  metabolism.rs  mod.rs  poe.rs  ultrasound.rs  usb_transfer.rs  wifi_stego.rs
src/utils/: logger.rs  mod.rs
